Disable battery optimization (Doze) for the mitm addon
It can interfere with the mitm service, causing connections to get stuck
until device is rebooted

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -493,4 +493,5 @@
     <string name="decryption_info_no_rule">This connection will not be decrypted. Create a decryption rule to decrypt it</string>
     <string name="tls_decryption_no_rules_notice">TLS decryption is only applied to connections that match the configured rules. Do you want to create decryption rules now?</string>
     <string name="active_vpn_detected">Active VPN detected</string>
+    <string name="mitm_doze_notice">Battery optimization may interfere with the mitm addon</string>
 </resources>
