--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -501,4 +501,6 @@
     <string name="always">Always</string>
     <string name="for_connections_to_decrypt">Only for connections to decrypt</string>
     <string name="decrypt_quic_notice">Decrypting QUIC is currently not supported. As a workaround, stop the capture and select the option to block QUIC in the PCAPdroid settings</string>
+    <string name="target_apps">Target apps</string>
+    <string name="target_apps_help">Select the applications to capture</string>
 </resources>
