Allow to specify what to copy from the payload
- For the HTTP tab, allow to to copy only headers/body/both
- For other tabs, allow to copy in plaintext or hexdump format

See #362

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -503,4 +503,7 @@
     <string name="decrypt_quic_notice">Decrypting QUIC is currently not supported. As a workaround, stop the capture and select the option to block QUIC in the PCAPdroid settings</string>
     <string name="target_apps">Target apps</string>
     <string name="target_apps_help">Select the applications to capture</string>
+    <string name="headers">Headers</string>
+    <string name="body">Body</string>
+    <string name="both">Both</string>
 </resources>
