--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -507,4 +507,5 @@
     <string name="headers">Headers</string>
     <string name="body">Body</string>
     <string name="both">Both</string>
+    <string name="whats_new">What\'s new</string>
 </resources>
