--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -210,7 +210,7 @@
     <string name="start_at_boot_summary">Avvia la cattura in automatico all\'avvio del dispositivo</string>
     <string name="malware_whitelist_help">Whitelist definita dall\'utente per inibire il rilevamento di malware. Tieni premuto su una connessione malevola per creare una regola</string>
     <string name="enable_socks5_proxy_summary">Redirigi tutte le connessioni TCP verso un proxy SOCKS5</string>
-    <string name="decryption_no_filter_warn">Quando la decrittazione TLS è abilitata, è necessario selezionare un filtro app o usare la whitelist di decrittazione per evitare di perdere la connessione a Internet</string>
+    <string name="decryption_no_filter_warn">Quando la decrittazione TLS è abilitata, è necessario selezionare un filtro app per evitare di perdere la connessione a Internet</string>
     <string name="traffic_dump">Salvataggio del traffico</string>
     <string name="conn_status_active">Attiva</string>
     <string name="phone_app">Telefono</string>
@@ -481,4 +481,20 @@
     <string name="decryption_info_no_rule">La connessione non sarà decrittata. Per decrittarla, crea una regola di decrittazione</string>
     <string name="tls_decryption_no_rules_notice">La decrittazione TLS è applicata soltanto alle connessioni che matchano le regole configurate. Vuoi creare ora delle regole di decrittazione\?</string>
     <string name="root_capture_pcapd_start_failure">Avvio della cattura fallito. Assicurati di concedere l\'accesso root a PCAPdroid</string>
+    <string name="export_ellipsis">Esporta…</string>
+    <string name="redirected">redirezionata</string>
+    <string name="always">Sempre</string>
+    <string name="target_apps">Filtri app</string>
+    <string name="whats_new">Novità</string>
+    <string name="mitm_doze_notice">L\'ottimizzazione della batteria potrebbe interferire con l\'addon mitm</string>
+    <string name="never">Mai</string>
+    <string name="for_connections_to_decrypt">Solo per connessioni da decrittare</string>
+    <string name="decrypt_quic_notice">La decrittazione di QUIC non è attualmente supportata. Come soluzione temporanea, ferma la cattura e seleziona l\'opzione di blocco QUIC dalle opzioni PCAPdroid</string>
+    <string name="target_apps_help">Seleziona le applicazione da catturare</string>
+    <string name="headers">Header</string>
+    <string name="connection_redirected_port_map">Questa connessione è stata redirezionata per via di una regola di port mapping</string>
+    <string name="dnscrypt_how_to">Come usare DoH / DNSCrypt con PCAPdroid</string>
+    <string name="body">Corpo</string>
+    <string name="both">Entrambi</string>
+    <string name="raw_bytes">Byte grezzi</string>
 </resources>
