Improve payload export
- HTTP body is now exported in binary form, with file name
- fix export when HTTP body is empty
- set "body" as the default HTTP export action
- add new "Raw bytes" export option for non-HTTP

See #362

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -504,4 +504,5 @@
     <string name="body">Body</string>
     <string name="both">Both</string>
     <string name="whats_new">What\'s new</string>
+    <string name="raw_bytes">Raw bytes</string>
 </resources>
