--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -567,4 +567,8 @@
     <string name="tls_decryption_not_supported_16KB">TLS decryption is currently unsupported on 16 KB devices</string>
     <string name="filename_prefix">Filename prefix</string>
     <string name="filename_prefix_description">Set the prefix for the files exported by PCAPdroid, e.g. PCAP files</string>
+    <string name="http_log">HTTP log</string>
+    <string name="no_requests">No requests</string>
+    <string name="item_not_found">Could not find the specified item</string>
+    <string name="http_details">HTTP details</string>
 </resources>
