--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,8 @@
     <string name="open_sockets">Open sockets</string>
     <string name="bytes_sent">Bytes sent</string>
     <string name="bytes_rcvd">Bytes received</string>
+    <string name="ipv6_bytes_sent">IPv6 Bytes sent</string>
+    <string name="ipv6_bytes_rcvd">IPv6 Bytes received</string>
     <string name="packets_sent">Packets sent</string>
     <string name="packets_rcvd">Packets received</string>
     <string name="dns_queries">DNS queries</string>
