--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -498,4 +498,12 @@
     <string name="headers">Başlıklar</string>
     <string name="body">Gövde</string>
     <string name="raw_bytes">Ham baytlar</string>
+    <string name="restart_on_disconnection">Bağlantı kesildiğinde yeniden başlat</string>
+    <string name="vpn_reconnection">VPN yeniden bağlantısı</string>
+    <string name="vpn_reconnection_aborted">VPN yeniden bağlantısı iptal edildi</string>
+    <string name="waiting_for_vpn_disconnect">Etkin VPN bağlantısının kesilmesi bekleniyor…</string>
+    <string name="restart_on_disconnection_summary">Diğer VPN uygulamaları tarafından durdurulduktan sonra yakalamayı otomatik olarak yeniden başlat</string>
+    <string name="ipv6_bytes_sent">Gönderilen IPv6 bayt</string>
+    <string name="ipv6_bytes_percentage">IPv6 bayt yüzdesi</string>
+    <string name="ipv6_bytes_rcvd">Alınan IPv6 bayt</string>
 </resources>
