--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -70,6 +70,7 @@
     <string name="bytes_rcvd">已接收字节数</string>
     <string name="ipv6_bytes_sent">已发送IPv6字节数</string>
     <string name="ipv6_bytes_rcvd">已接收IPv6字节数</string>
+    <string name="ipv6_bytes_percentage">IPv6字节数占比</string>
     <string name="packets_sent">已发送数据包</string>
     <string name="packets_rcvd">已接收数据包</string>
     <string name="dns_queries">DNS 查询</string>
