Update Indonesian strings

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -482,4 +482,28 @@
     <string name="mitmproxy_opts">Opsi mitmproxy tambahan</string>
     <string name="destination_port">Port tujuan</string>
     <string name="capture_interface_open_error">Tidak dapat membuka antarmuka pencatatan</string>
+    <string name="raw_bytes">Byte mentah</string>
+    <string name="dnscrypt_how_to">Cara penggunaan DoH / DNSCrypt dengan PCAPdroid</string>
+    <string name="export_ellipsis">Ekspor…</string>
+    <string name="never">Jangan pernah</string>
+    <string name="always">Selalu</string>
+    <string name="ipv6_bytes_sent">Byte IPv6 terkirim</string>
+    <string name="ipv6_bytes_rcvd">Byte IPv6 diterima</string>
+    <string name="connection_redirected_port_map">Koneksi ini telah dialihkan karena aturan pemetaan port</string>
+    <string name="decrypt_quic_notice">Mendekripsi QUIC saat ini tidak didukung. Sebagai solusi sementara, hentikan penangkapan dan pilih opsi untuk memblokir QUIC di pengaturan PCAPdroid</string>
+    <string name="restart_on_disconnection">Mulai ulang saat putus koneksi</string>
+    <string name="restart_on_disconnection_summary">Jalankan ulang tangkapan karena penggunaan apl VPN lain</string>
+    <string name="vpn_reconnection">Menghubungkan kembali VPN</string>
+    <string name="vpn_reconnection_aborted">Penghubungan ulang VPN dihentikan</string>
+    <string name="waiting_for_vpn_disconnect">VPN yang sedang berjalan akan diberhentikan…</string>
+    <string name="ipv6_bytes_percentage">Persentase byte IPv6</string>
+    <string name="target_apps">Aplikasi target</string>
+    <string name="target_apps_help">Pilih apl yang ingin ditangkap</string>
+    <string name="whats_new">Apa yang baru</string>
+    <string name="mitm_doze_notice">Optimasi baterai mungkin mengintervensi add-on mitm</string>
+    <string name="redirected">dialihkan</string>
+    <string name="for_connections_to_decrypt">Hanya untuk koneksi yang akan didekripsi</string>
+    <string name="headers">Header</string>
+    <string name="body">Body</string>
+    <string name="both">Keduanya</string>
 </resources>
